# unilang

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_DRIVERS.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  install.ps1  install.sh  unilang.toml
.github/workflows/: ci.yml  release.yml
.wiki/: Building-Your-First-Model.md  Compiler-Pipeline.md  Development-Setup.md  Home.md  How-the-Parser-Works.md  How-the-VM-Works.md  How-to-Contribute.md  IDE-Setup.md  Installation.md  Language-Overview.md  ML-Framework-Overview.md  Python-Java-Interop.md  Quick-Start.md  Standard-Library-Reference.md  Type-System.md  _Sidebar.md
crates/unilang-bridge/: Cargo.toml
crates/unilang-bridge/benches/: bridge_bench.rs
crates/unilang-bridge/src/: cpython.rs  error.rs  jvm.rs  lib.rs  types.rs
crates/unilang-cli/: Cargo.toml
crates/unilang-cli/src/: formatter.rs  init.rs  linter.rs  main.rs  pack.rs  project.rs  repl.rs  test_runner.rs
crates/unilang-codegen/src/: bytecode.rs  compiler.rs  tests.rs
crates/unilang-common/: Cargo.toml
crates/unilang-common/src/: error.rs  lib.rs  source.rs  span.rs  syntax_origin.rs
crates/unilang-drivers/: Cargo.toml  build.rs
crates/unilang-drivers/src/: elasticsearch.rs  external.rs  kafka.rs  lib.rs  memcached.rs  mongodb.rs  mysql.rs  postgres.rs  prometheus_driver.rs  redis.rs  smtp.rs  sqlite.rs
crates/unilang-drivers/src/community/: mod.rs
crates/unilang-installer/: Cargo.toml
crates/unilang-installer/src/: download.rs  install.rs  main.rs  ui.rs
crates/unilang-lexer/: Cargo.toml
crates/unilang-lexer/src/: indent.rs  keywords.rs  lib.rs  numbers.rs  scanner.rs  strings.rs  token.rs
crates/unilang-lsp/src/: backend.rs  definition.rs  hover.rs
crates/unilang-native/src/: lib.rs
crates/unilang-parser/: Cargo.toml
crates/unilang-parser/src/: ast.rs  expr.rs  lib.rs  parser.rs  stmt.rs  tests.rs
crates/unilang-runtime/: Cargo.toml
crates/unilang-runtime/src/: error.rs  lib.rs  tests.rs  value.rs  vm.rs
crates/unilang-semantic/src/: analyzer.rs  checker.rs  lib.rs  scope.rs  types.rs
crates/unilang-stdlib/: Cargo.toml
crates/unilang-stdlib/src/: builtins.rs  collections.rs  json.rs  lib.rs  math.rs  strings.rs  tests.rs
docs/: DRIVERS.md
docs/architecture/: ARCHITECTURE.md
docs/contributing/: CODE_OF_CONDUCT.md
docs/design/: DESIGN_DECISIONS.md  INTEROP_GUIDE.md  THREADING_MODEL.md  TYPE_SYSTEM.md
docs/guides/: ECLIPSE_SETUP.md  IDE_SETUP.md  INSTALLATION.md  JETBRAINS_SETUP.md  QUICKSTART.md  VSCODE_SETUP.md
docs/planning/: GOVERNANCE.md  PRD.md  ROADMAP.md
docs/specifications/: GRAMMAR.ebnf  LANGUAGE_SPEC.md
examples/advanced/: web_service.uniL
examples/basic/: hello.uniL
examples/ecommerce/: README.md  docker-compose.yml
examples/ecommerce/backend/: server.uniL
examples/ecommerce/frontend/public/: index.html
examples/ecommerce/frontend/src/: app.js
examples/ecommerce/frontend/src/components/: cart.js  checkout.js  home.js  pdp.js  plp.js
examples/ecommerce/frontend/src/styles/: main.css
examples/ecommerce/frontend/src/utils/: api.js
examples/library-mgmt/: README.md  unilang.toml
examples/library-mgmt/backend/api/: server.uniL
examples/library-mgmt/backend/ml/: prediction_engine.uniL
examples/library-mgmt/backend/ml/model/: feature_names.pkl  gb_model.pkl  label_encoder.pkl  scaler.pkl
examples/library-mgmt/frontend/src/components/: books.js  dashboard.js
examples/library-mgmt/frontend/src/styles/: main.css
examples/library-mgmt/frontend/src/utils/: api.js
examples/ml/: ml_pipeline.uniL
examples/ml-framework/: README.md
examples/ml-framework/core/: __init__.uniL  layers.uniL  loss.uniL  network.uniL  optimizers.uniL  tensor.uniL  trainer.uniL
examples/ml-framework/docs/: 01_CORE_CONCEPTS.md  02_ARCHITECTURE.md  03_UNINN_MODEL.md  04_BUILD_YOUR_FIRST_MODEL.md  05_TRAINING_DEEP_DIVE.md  06_BEST_PRACTICES.md  07_API_REFERENCE.md  08_USE_CASES.md  README.md
examples/ml-framework/examples/: inference_example.uniL  train_model.uniL
examples/ml-framework/models/: uniNN.uniL
examples/threading/: concurrent_processing.uniL
projects/library-mgmt/: run_server.py
projects/library-mgmt/backend/data/: generate_data.uniL
projects/library-mgmt/backend/ml/model/: rf_model.pkl
projects/library-mgmt/backend/models/: book.uniL
projects/library-mgmt/backend/services/: library_service.uniL
projects/library-mgmt/frontend/public/: index.html
projects/library-mgmt/frontend/src/: app.js
projects/library-mgmt/frontend/src/components/: analytics.js  predictions.js
tools/eclipse-plugin/: README.md
tools/jetbrains-plugin/: README.md
tools/unilang-ide/: README.md  electron-builder.yml  package.json
tools/unilang-ide/src/main/: main.js  preload.js
tools/unilang-ide/src/renderer/: app.js  editor.js  file-tree.js  index.html  terminal.js
tools/unilang-ide/src/renderer/styles/: main.css
tools/vscode-extension/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
tools/vscode-extension/snippets/: unilang.snippets.json
tools/vscode-extension/src/: extension.ts
tools/vscode-extension/syntaxes/: unilang.tmLanguage.json
