[package]
name = "unilang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for the UniLang compiler"

[[bin]]
name = "unilang"
path = "src/main.rs"

[dependencies]
unilang-common = { path = "../unilang-common" }
unilang-lexer = { path = "../unilang-lexer" }
unilang-parser = { path = "../unilang-parser" }
unilang-semantic = { path = "../unilang-semantic" }
unilang-codegen = { path = "../unilang-codegen" }
unilang-runtime = { path = "../unilang-runtime" }
unilang-stdlib = { path = "../unilang-stdlib" }
unilang-drivers = { path = "../unilang-drivers" }
clap.workspace = true
