# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.

[package]
name = "unilang-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Official driver ecosystem for UniLang — databases, queues, caches, and search engines"

[dependencies]
unilang-runtime = { path = "../unilang-runtime" }

# ── SQL Databases ────────────────────────────────────────────────
rusqlite  = { version = "0.32", features = ["bundled"],           optional = true }
mysql     = { version = "25",                                      optional = true }
postgres  = { version = "0.19",                                    optional = true }

# ── NoSQL / Document Databases ───────────────────────────────────
mongodb   = { version = "2", features = ["sync"],                  optional = true }

# ── Caching ──────────────────────────────────────────────────────
redis     = { version = "0.27", default-features = false, features = ["tcp_nodelay"], optional = true }
memcache  = { version = "0.17",                                    optional = true }

# ── Search / Indexing ─────────────────────────────────────────────
ureq      = { version = "2",                                       optional = true }

# ── Email ─────────────────────────────────────────────────────────
# Minimal SMTP client deps — lettre is not used because its transitive deps
# (chumsky → stacker → psm ≥ 0.1.26) require ar_archive_writer which needs the
# unstable edition2024 Cargo feature (unavailable before Cargo 1.85).
rustls          = { version = "0.23",  features = ["ring"], optional = true }
rustls-pki-types = { version = "1",                          optional = true }
webpki-roots    = { version = "0.26",                        optional = true }
base64          = { version = "0.22",                        optional = true }

# ── Time-series ───────────────────────────────────────────────────
# (uses ureq, declared above)

# ── Object Storage (S3 SigV4 deps) ───────────────────────────────
sha2      = { version = "0.10",                                    optional = true }
hmac      = { version = "0.12",                                    optional = true }
hex       = { version = "0.4",                                     optional = true }

# ── Messaging ─────────────────────────────────────────────────────
# lapin is an async AMQP client for RabbitMQ. Uses tokio internally.
lapin     = { version = "2",                                       optional = true }
tokio     = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
# nats 0.24 provides a blocking synchronous client API for NATS messaging
nats      = { version = "0.24",                                    optional = true }

# ── Metrics ───────────────────────────────────────────────────────
prometheus = { version = "0.13", default-features = false,         optional = true }

# ── WebSocket ─────────────────────────────────────────────────────
tungstenite = { version = "0.24",                                  optional = true }

# ── Serialization (shared) ───────────────────────────────────────
serde_json = { version = "1" }

[features]
# Core drivers compiled by default.
# mysql-driver / postgres-driver / mongodb-driver / memcached-driver require
# Rust ≥ 1.85 (edition2024 toolchain) — enable them explicitly when needed.
default = [
    "sqlite",
    "redis-driver",
    "kafka",
    "elasticsearch-driver",
]

# Individual driver feature flags — use these in your own crate to opt-in
sqlite             = ["dep:rusqlite"]
mysql-driver       = ["dep:mysql"]
postgres-driver    = ["dep:postgres"]
mongodb-driver     = ["dep:mongodb"]
redis-driver       = ["dep:redis"]
memcached-driver   = ["dep:memcache"]
elasticsearch-driver = ["dep:ureq"]
# kafka is in-memory by default; real Kafka via rdkafka is a separate crate
kafka              = []
smtp               = ["dep:rustls", "dep:rustls-pki-types", "dep:webpki-roots", "dep:base64"]
influxdb           = ["dep:ureq"]
s3                 = ["dep:ureq", "dep:sha2", "dep:hmac", "dep:hex"]
rabbitmq           = ["dep:lapin", "dep:tokio"]
nats-driver        = ["dep:nats"]
prometheus-driver  = ["dep:prometheus"]
websocket          = ["dep:tungstenite"]

# ── Edition presets ───────────────────────────────────────────────────────────
# unilang-lite: the 6 drivers included in the Lite release. Lightweight,
# zero-config defaults — everything a typical backend developer needs.
lite = [
    "sqlite",
    "redis-driver",
    "kafka",
    "elasticsearch-driver",
    "smtp",
    "mongodb-driver",
]

# unilang-full: every driver compiled in. Equivalent to all-drivers.
# Used by the Full release and `unilang-installer --full`.
full = [
    "sqlite",
    "mysql-driver",
    "postgres-driver",
    "mongodb-driver",
    "redis-driver",
    "memcached-driver",
    "elasticsearch-driver",
    "kafka",
    "smtp",
    "influxdb",
    "s3",
    "rabbitmq",
    "nats-driver",
    "prometheus-driver",
    "websocket",
]

# Enable every bundled driver at once (alias for full)
all-drivers = [
    "sqlite",
    "mysql-driver",
    "postgres-driver",
    "mongodb-driver",
    "redis-driver",
    "memcached-driver",
    "elasticsearch-driver",
    "kafka",
    "smtp",
    "influxdb",
    "s3",
    "rabbitmq",
    "nats-driver",
    "prometheus-driver",
    "websocket",
]
