[package]
name = "unilang-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parser and AST for the UniLang compiler"

[dependencies]
unilang-common = { path = "../unilang-common" }
unilang-lexer = { path = "../unilang-lexer" }
